--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -25,15 +25,15 @@
     <nav class="navbar navbar-transparent navbar-absolute">
     	<div class="container">
         	<!-- Brand and toggle get grouped for better mobile display -->
-        	<div class="navbar-header">
-        		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-example">
-            		<span class="sr-only">Toggle navigation</span>
-		            <span class="icon-bar"></span>
-		            <span class="icon-bar"></span>
-		            <span class="icon-bar"></span>
-        		</button>
-        		<a class="navbar-brand" href="http://www.creative-tim.com">Creative Tim</a>
-        	</div>
+        	<!--<div class="navbar-header">-->
+        		<!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-example">-->
+            		<!--<span class="sr-only">Toggle navigation</span>-->
+		            <!--<span class="icon-bar"></span>-->
+		            <!--<span class="icon-bar"></span>-->
+		            <!--<span class="icon-bar"></span>-->
+        		<!--</button>-->
+        		<!--<a class="navbar-brand" href="http://www.creative-tim.com">Creative Tim</a>-->
+        	<!--</div>-->
 
         	<div class="collapse navbar-collapse" id="navigation-example">
         		<ul class="nav navbar-nav navbar-right">
@@ -208,10 +208,8 @@
 	                        </form>
 	                    </div>
 	                </div>
-
 	            </div>
 	        </div>
-
 		</div>
 
 	    <footer class="footer">
