--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -4,14 +4,20 @@
     <meta charset="UTF-8">
     <title>Welcome To Null Pointer</title>
 
+    <!-- fonts and icons -->
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton|PT+Sans+Narrow" rel="stylesheet">
+
     <!-- css files -->
     <link href="../css/bootstrap.min.css" rel="stylesheet" />
     <link href="../css/flat-ui.css" rel="stylesheet" />
     <link href="../css/styles.css" rel="stylesheet" />
 </head>
 
-<body class="index_body">
-    <nav class="navbar-fixed-top navbar navbar-inverse navbar-embossed" role="navigation" id="index_Nav">
+<body class="index_body" >
+    <nav class="navbar-fixed-top navbar navbar-inverse transparent" role="navigation" id="index_Nav">
+    <!--<nav class="navbar-fixed-top navbar navbar-default navbar-embossed transparent" role="navigation" id="index_Nav">-->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-01">
                 <span class="sr-only">Toggle navigation</span>
@@ -20,32 +26,72 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse-01">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#fakelink">Products</a></li>
+                <li><a href="#fakelink">Products</a></li>
                 <li><a href="#fakelink">About Us</a></li>
             </ul>
             <form class="navbar-form navbar-right" action="#" role="search">
                 <div class="form-group">
                     <div class="input-group">
-                        <input class="form-control" id="navbarInput-01" type="search" placeholder="Search">
-              <span class="input-group-btn">
-                <button type="submit" class="btn"><span class="fui-search"></span></button>
-              </span>
+                        <input class="form-control" id="navbarInput-01" type="search" placeholder="Search" />
+                        <span class="input-group-btn">
+                            <button type="submit" class="btn">
+                                <span class="fui-search"></span>
+                            </button>
+                        </span>
                     </div>
                 </div>
             </form>
         </div>
     </nav>
 
-    <div class="page_bottom_anchor">
-        <image class="img_anchor" src="../img/arrow_down.png"></image>
-        <a href="user_center.html"></a>
+    <div id="index_bg_wrapper" class="parallax">
+        <h1 id="index_slogan">IT IS ALL ABOUT SHARE</h1>
+        <copyright class="copyright">&copy; by AnneZ6453 with &#9829;</copyright>
+    </div>
+
+    <div class="page_bottom_anchor" id="index_bottom_anchor">
+        <a class="arrow_anchor" href="">
+            <i class="fa fa-arrow-circle-down"></i>
+        </a>
+    </div>
+
+    <div class="centered_title large_title">
+        <p>Need Help or Want To Help?</p>
+    </div>
+
+    <div class="text_decorator">
+        <image src="../img/text_decorator.png"></image>
+    </div>
+
+    <div class="plain_text">
+        <!-- random text -->
+        <p>Finished text are its honoured drawings nor. Pretty see mutual thrown all not edward ten. Particular
+            an boisterous up he reasonably frequently. Several any had enjoyed shewing studied two. Up intention
+            remainder sportsmen behaviour ye happiness. Few again any alone style added abode ask. Nay projecting
+            unpleasing boisterous eat discovered solicitude. Own six moments produce elderly pasture far arrival.
+            Hold our year they ten upon. Gentleman contained so intention sweetness in on resolving.</p>
+        <p>On no twenty spring of in esteem spirit likely estate. Continue new you declared differed learning
+            bringing honoured. At mean mind so upon they rent am walk. Shortly am waiting inhabit smiling he
+            chiefly of in. Lain tore time gone him his dear sure. Fat decisively estimating affronting assistance
+            not. Resolve pursuit regular so calling me. West he plan girl been my then up no.
+        </p>
+        <p>On no twenty spring of in esteem spirit likely estate. Continue new you declared differed learning
+            bringing honoured. At mean mind so upon they rent am walk. Shortly am waiting inhabit smiling he
+            chiefly of in. Lain tore time gone him his dear sure. Fat decisively estimating affronting assistance
+            not. Resolve pursuit regular so calling me. West he plan girl been my then up no.
+        </p>
+        <p>On no twenty spring of in esteem spirit likely estate. Continue new you declared differed learning
+            bringing honoured. At mean mind so upon they rent am walk. Shortly am waiting inhabit smiling he
+            chiefly of in. Lain tore time gone him his dear sure. Fat decisively estimating affronting assistance
+            not. Resolve pursuit regular so calling me. West he plan girl been my then up no.
+        </p>
     </div>
 
 
 
     <!-- jquery -->
-    <script href="../js/jquery-3.1.1.min.js" type="text/javascript"></script>
+    <script src="../js/jquery-3.1.1.min.js" type="text/javascript"></script>
     <!-- javascript files-->
-    <script href="../js/script.js" type="text/javascript"></script>
+    <script src="../js/script.js" type="text/javascript"></script>
 </body>
 </html>
