--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse-01">
             <ul class="nav navbar-nav">
-                <li><a href="#fakelink">Products</a></li>
+                <li><a href="#fakelink">Intro</a></li>
                 <li><a href="#fakelink">About Us</a></li>
             </ul>
             <form class="navbar-form navbar-right" action="#" role="search">
@@ -45,7 +45,7 @@
     </nav>
 
     <div id="index_bg_wrapper" class="parallax">
-        <h1 id="index_slogan">IT IS ALL ABOUT SHARE</h1>
+        <h1 id="index_slogan">IT IS ALL ABOUT SHARING</h1>
         <copyright class="copyright">&copy; by AnneZ6453 with &#9829;</copyright>
     </div>
 
